# wax-format

./: Cargo.toml  LICENSE  README.md
crates/wax-builder/: Cargo.toml
crates/wax-builder/src/: main.rs
crates/wax-core/: Cargo.toml
crates/wax-core/src/: lib.rs  reader.rs
