[package]
name = "wax-builder"
version = "1.1.0"
edition = "2021"

[dependencies]
wax-core = { path = "../wax-core" }
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
walkdir = "2.4"
anyhow = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
zstd = "0.13"
mime_guess = "2.0"
zerocopy = "0.7" 
